List of user-visible changes of Ratfor Testsuite.

New in 0.9c
-----------
 * Fixed a bug in the auxiliary script `timer', which could causes spurious
   intermittent failures with some Korn shells.

New in 0.9b
-----------
 * Now the `configure' scripts checks that the detected Fortran 77
   compiler can create executables (this was not done before).  The check
   is performed even if the compiler is specified by the user himself
   (through the `F77' variable).  The only exception is when F77 is
   defined as "NONE", meaning that no Fortran compiler is to be used by
   the testsuite (this special behaviour was present also in the previous
   versions).
 * Auxiliary program `timer' (used by the testsuite) has been rewritten
   as a shell script, so that no C compiler is required anymore to run
   the Ratfor Testsuite.
 * Added possbility to import mainter-specific rules when using GNU Make,
   if the (new) option `--enable-maintainer' is passed to the configure
   script.
 * The Ratfor Testsuite uses files imported from SteLib (e.g. `maint.mk',
   `GNUmakefile', and `ax_check_cc_flag.m4').  Some related reorganization
   and modifications have been required.
 * Added BUGS and HACKING files. Consequent adaptation of the README file.

New in 0.9a
-----------
 * The Ratfor Testsuite tree has been separated from the Public Domain
   Ratfor tree, and turned into an indipendent package, beginning a life
   of its own.