@@ -20,7 +20,9 @@ endif
 
 SUBDIRS = bin-aux tests
 
-DISTCHECK_CONFIGURE_FLAGS = 'RATFOR=$(RATFOR)'
+DISTCHECK_CONFIGURE_FLAGS = \
+	'RATFOR=$(RATFOR)' \
+	'RAT4_TESTSUITE_XFAIL_TESTS=$(RAT4_TESTSUITE_XFAIL_TESTS)'
 
 # We don't support install targets.
 RAT4_INSTALL_TARGETS = \
